# programmiersprachen-aufgabe-1

./: .gitignore  Glossar.md  README.md
source/: CMakeLists.txt  aufgabe1_3.cpp  checksum.cpp  cyl.cpp  factorial.cpp  fract.cpp  is_prime.cpp  mile_to_kilometer.cpp  sum_multiples.cpp  tests.cpp
